--- a/src/OpeningScreen.form
+++ b/src/OpeningScreen.form
@@ -63,7 +63,7 @@
           </vspacer>
         </children>
       </grid>
-      <grid id="7594e" binding="loginScreen" layout-manager="GridLayoutManager" row-count="7" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="7594e" binding="loginScreen" layout-manager="GridLayoutManager" row-count="8" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <card name="Card2"/>
@@ -81,7 +81,7 @@
               <text value="Login"/>
             </properties>
           </component>
-          <component id="5221" class="javax.swing.JTextField">
+          <component id="5221" class="javax.swing.JTextField" binding="usernameField">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -125,18 +125,18 @@
           </vspacer>
           <vspacer id="e8055">
             <constraints>
-              <grid row="6" column="3" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="7" column="3" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
-          <component id="1ad44" class="javax.swing.JButton" binding="registerButton2">
+          <component id="1ad44" class="javax.swing.JButton" binding="toRegisterButton">
             <constraints>
-              <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Haven't made an account yet? Click here to register."/>
             </properties>
           </component>
-          <component id="781f3" class="javax.swing.JPasswordField" binding="passwordField1" default-binding="true">
+          <component id="781f3" class="javax.swing.JPasswordField" binding="passwordField">
             <constraints>
               <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -144,9 +144,17 @@
             </constraints>
             <properties/>
           </component>
+          <component id="d261c" class="javax.swing.JButton" binding="loginToMenuButton">
+            <constraints>
+              <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Login"/>
+            </properties>
+          </component>
         </children>
       </grid>
-      <grid id="317" binding="registerScreen" layout-manager="GridLayoutManager" row-count="11" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="317" binding="registerScreen" layout-manager="GridLayoutManager" row-count="12" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <card name="Card3"/>
@@ -172,7 +180,7 @@
               <text value="Enter your first name/nickname:"/>
             </properties>
           </component>
-          <component id="26e47" class="javax.swing.JTextField" default-binding="true">
+          <component id="26e47" class="javax.swing.JTextField" binding="nameField">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -188,7 +196,7 @@
               <text value="Enter a username (no spaces or special characters):"/>
             </properties>
           </component>
-          <component id="91e3b" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+          <component id="91e3b" class="javax.swing.JTextField" binding="createUsernameField">
             <constraints>
               <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -212,7 +220,7 @@
               <text value="Confirm your password:"/>
             </properties>
           </component>
-          <component id="88c56" class="javax.swing.JPasswordField" binding="passwordField2" default-binding="true">
+          <component id="88c56" class="javax.swing.JPasswordField" binding="createPasswordField">
             <constraints>
               <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -220,7 +228,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="43cc8" class="javax.swing.JPasswordField" binding="passwordField3" default-binding="true">
+          <component id="43cc8" class="javax.swing.JPasswordField" binding="confirmPasswordField">
             <constraints>
               <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -243,7 +251,7 @@
           </vspacer>
           <vspacer id="ba000">
             <constraints>
-              <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="11" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
           <hspacer id="1427f">
@@ -256,6 +264,14 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
+          <component id="6b7bb" class="javax.swing.JButton" binding="toLoginButton">
+            <constraints>
+              <grid row="10" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Already have an account? Click here to login."/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
