--- a/essayPlanner.form
+++ b/essayPlanner.form
@@ -28,7 +28,7 @@
           <text value="Back"/>
         </properties>
       </component>
-      <component id="2ee74" class="javax.swing.JLabel" binding="DISPLAY" custom-create="true">
+      <component id="2ee74" class="javax.swing.JLabel" binding="DISPLAY">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
