- create AddClassScreen that takes in course information - linked AddClassScreen to ClassesScreen

--- a/src/OpeningScreen.form
+++ b/src/OpeningScreen.form
@@ -88,7 +88,7 @@
         </constraints>
         <properties>
           <background color="-16777216"/>
-          <visible value="false"/>
+          <visible value="true"/>
         </properties>
         <border type="none"/>
         <children>
