--- a/src/HomeScreen.form
+++ b/src/HomeScreen.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="homeScreen">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="HomeScreen">
   <grid id="27dc6" binding="homePanel" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
@@ -47,7 +47,7 @@
           <text value="Hello, Name."/>
         </properties>
       </component>
-      <component id="8e2ae" class="javax.swing.JButton" binding="classes">
+      <component id="8e2ae" class="javax.swing.JButton" binding="classesButton">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -57,7 +57,7 @@
           <text value="Classes"/>
         </properties>
       </component>
-      <component id="9354a" class="javax.swing.JButton" binding="calendar">
+      <component id="9354a" class="javax.swing.JButton" binding="calendarButton">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -67,7 +67,7 @@
           <text value="Calendar"/>
         </properties>
       </component>
-      <component id="1a060" class="javax.swing.JButton" binding="studyGuide">
+      <component id="1a060" class="javax.swing.JButton" binding="studyGuideButton">
         <constraints>
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
